syntax = "proto3";

package greeter;
option go_package = "v1/auth";

import "google/api/annotations.proto";

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  bool success = 1;
  string email = 2;
  string accessToken = 3;
}

service Auth {
  rpc SignIn(SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/v1/auth/sign_in"
      body: "*"
    };
  }
}